--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==3.1.2
+fastapi==0.115.5
+uvicorn==0.32.0
 gunicorn==23.0.0
 google-cloud-firestore==2.21.0
 google-cloud-core==2.4.3
 requests==2.32.3
+google-cloud-secret-manager==2.20.2
