--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,17 @@
-name: "🚀 Natacha CI/CD"
+name: 🚀 Natacha CI/CD
 
 on:
   push:
     branches:
       - main
     paths:
-      - "natacha_base/**"
-      - "routes/**"
+      - "app/**"
+      - "core/**"
       - "memory_console/**"
       - "natacha_core/**"
       - "Dockerfile"
-      - "docker-compose.yml"
       - ".github/workflows/deploy.yml"
-  workflow_dispatch: {}   # 👈 habilita correrlo a mano desde CLI
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -20,15 +19,14 @@ jobs:
     env:
       PROJECT_ID: asistente-sebastian
       REGION: us-central1
-      MEMORY_SERVICE: natacha-memory-console
-      CORE_SERVICE: natacha-core
-      API_SERVICE: natacha-api
+      API_IMAGE: natacha-api
+      CORE_DIR: natacha_core
+      MEM_DIR: memory_console
 
     steps:
       - name: 🧩 Checkout repo
         uses: actions/checkout@v4
 
-      # 👇 ahora sí: este secret ya lo cargaste con gh
       - name: 🔐 Auth with Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -37,7 +35,7 @@ jobs:
       - name: 🐳 Setup Docker
         uses: docker/setup-buildx-action@v3
 
-      # paso de debug para confirmar que llegó el secret
+      # solo para debug rápido en el futuro
       - name: 🧪 Test GCP secret (debug)
         run: |
           echo "🔍 Probando si el secret GCP_SERVICE_ACCOUNT_KEY llega desde GitHub..."
@@ -48,31 +46,40 @@ jobs:
             echo "✅ El secret GCP_SERVICE_ACCOUNT_KEY está presente."
           fi
 
-      - name: 🏗️ Build and Push Containers
+      - name: 🏗️ Build & Push memory_console
         run: |
-          echo "Building and pushing services..."
-          for SERVICE in $MEMORY_SERVICE $CORE_SERVICE $API_SERVICE; do
-            echo "🧱 Building $SERVICE..."
-            docker build -t gcr.io/$PROJECT_ID/$SERVICE:latest -f $SERVICE/Dockerfile .
-            docker push gcr.io/$PROJECT_ID/$SERVICE:latest
-          done
+          if [ -d "${{ env.MEM_DIR }}" ]; then
+            echo "🧱 Building memory_console..."
+            docker build -t gcr.io/${{ env.PROJECT_ID }}/memory-console:latest -f ${{ env.MEM_DIR }}/Dockerfile .
+            gcloud auth configure-docker gcr.io --quiet
+            docker push gcr.io/${{ env.PROJECT_ID }}/memory-console:latest
+          else
+            echo "⚠️ No existe carpeta ${{ env.MEM_DIR }}, se salta este build."
+          fi
+
+      - name: 🏗️ Build & Push natacha_core
+        run: |
+          if [ -d "${{ env.CORE_DIR }}" ]; then
+            echo "🧱 Building natacha_core..."
+            docker build -t gcr.io/${{ env.PROJECT_ID }}/natacha-core:latest -f ${{ env.CORE_DIR }}/Dockerfile .
+            gcloud auth configure-docker gcr.io --quiet
+            docker push gcr.io/${{ env.PROJECT_ID }}/natacha-core:latest
+          else
+            echo "⚠️ No existe carpeta ${{ env.CORE_DIR }}, se salta este build."
+          fi
+
+      - name: 🏗️ Build & Push API (Dockerfile raíz)
+        run: |
+          echo "🧱 Building API (root Dockerfile)..."
+          docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.API_IMAGE }}:latest -f Dockerfile .
+          gcloud auth configure-docker gcr.io --quiet
+          docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.API_IMAGE }}:latest
 
       - name: 🚀 Deploy to Cloud Run
         run: |
-          echo "Deploying services to Cloud Run..."
-          gcloud run deploy $MEMORY_SERVICE \
-            --image gcr.io/$PROJECT_ID/$MEMORY_SERVICE:latest \
-            --region $REGION --platform managed --allow-unauthenticated
-
-          gcloud run deploy $CORE_SERVICE \
-            --image gcr.io/$PROJECT_ID/$CORE_SERVICE:latest \
-            --region $REGION --platform managed --allow-unauthenticated
-
-          gcloud run deploy $API_SERVICE \
-            --image gcr.io/$PROJECT_ID/$API_SERVICE:latest \
-            --region $REGION --platform managed --allow-unauthenticated
-
-      - name: ✅ Health Check
-        run: |
-          echo "Checking services..."
-          curl -f https://${{ env.API_SERVICE }}-${{ env.REGION }}.a.run.app/health || true
+          echo "🚀 Deploying API to Cloud Run..."
+          gcloud run deploy natacha-api \
+            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.API_IMAGE }}:latest \
+            --region ${{ env.REGION }} \
+            --platform managed \
+            --allow-unauthenticated
