--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: "🚀 Natacha CI/CD"
+name: 🚀 Natacha CI/CD
 
 on:
   push:
@@ -7,137 +7,84 @@ on:
     paths:
       - "memory_console/**"
       - "natacha_core/**"
-      - "app/**"
       - "app.py"
       - "Dockerfile"
-      - "docker-compose.yml"
       - ".github/workflows/deploy.yml"
   workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     env:
       PROJECT_ID: asistente-sebastian
       REGION: us-central1
-      # nombres reales según tu repo actual
-      MEMORY_SERVICE: natacha-memory-console
-      CORE_SERVICE: natacha-core
+      AR_REPO: natacha-repo
+      MEMORY_SERVICE: memory_console
+      CORE_SERVICE: natacha_core
       API_SERVICE: natacha-api
 
     steps:
-      - name: "🧩 Checkout repo"
+      - name: 🧩 Checkout repo
         uses: actions/checkout@v4
 
-      - name: "🔐 Auth with Google Cloud"
+      - name: 🔐 Auth with Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-          token_format: "access_token"
+          create_credentials_file: true
+          export_environment_variables: true
 
-      - name: "🐳 Setup Docker"
+      - name: 🐳 Setup Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: "🧪 Test GCP secret (debug)"
+      - name: 🧪 Test GCP secret (debug)
         run: |
-          echo "🔍 Probando si el secret GCP_SERVICE_ACCOUNT_KEY llega desde GitHub..."
+          echo "🔍 Probando secret..."
           if [ -z "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" ]; then
-            echo "❌ El secret GCP_SERVICE_ACCOUNT_KEY está VACÍO o no está definido."
+            echo "❌ Secret vacío"
             exit 1
           else
-            echo "✅ El secret GCP_SERVICE_ACCOUNT_KEY está presente."
+            echo "✅ Secret presente"
           fi
 
-      # -----------------------------
-      # 1) memory_console (tu carpeta SÍ existe)
-      # -----------------------------
-      - name: "🏗️ Build & Push memory_console"
+      # 1) memory_console
+      - name: 🏗️ Build & Push memory_console
         run: |
-          if [ -d "memory_console" ] && [ -f "memory_console/Dockerfile" ]; then
-            echo "📦 Build de memory_console ..."
-            docker build \
-              -t gcr.io/${PROJECT_ID}/memory_console:latest \
-              -f memory_console/Dockerfile \
-              memory_console
-            docker push gcr.io/${PROJECT_ID}/memory_console:latest
-          else
-            echo "⚠️ No existe memory_console/ o no tiene Dockerfile. Lo salto."
-          fi
+          docker build -t us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/memory_console:latest \
+            -f memory_console/Dockerfile \
+            memory_console
+          docker push us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/memory_console:latest
 
-      # -----------------------------
-      # 2) natacha_core (en tu repo existe la carpeta natacha_core/)
-      # -----------------------------
-      - name: "🏗️ Build & Push natacha_core"
+      # 2) core
+      - name: 🏗️ Build & Push natacha_core
         run: |
-          if [ -d "natacha_core" ] && [ -f "natacha_core/Dockerfile" ]; then
-            echo "📦 Build de natacha_core ..."
-            docker build \
-              -t gcr.io/${PROJECT_ID}/natacha_core:latest \
-              -f natacha_core/Dockerfile \
-              natacha_core
-            docker push gcr.io/${PROJECT_ID}/natacha_core:latest
-          else
-            echo "⚠️ No existe natacha_core/ o no tiene Dockerfile. Lo salto."
-          fi
+          docker build -t us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha_core:latest \
+            -f natacha_core/Dockerfile \
+            natacha_core
+          docker push us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha_core:latest
 
-      # -----------------------------
-      # 3) API principal (tu Dockerfile raíz)
-      # -----------------------------
-      - name: "🏗️ Build & Push API (Dockerfile raíz)"
+      # 3) api (Dockerfile raíz)
+      - name: 🏗️ Build & Push API (root Dockerfile)
         run: |
-          if [ -f "Dockerfile" ]; then
-            echo "📦 Build de API raíz ..."
-            docker build \
-              -t gcr.io/${PROJECT_ID}/natacha-api:latest \
-              -f Dockerfile \
-              .
-            docker push gcr.io/${PROJECT_ID}/natacha-api:latest
-          else
-            echo "⚠️ No hay Dockerfile raíz. Lo salto."
-          fi
+          docker build -t us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha-api:latest \
+            -f Dockerfile \
+            .
+          docker push us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha-api:latest
 
-      # -----------------------------
-      # 4) Deploy a Cloud Run (solo lo que haya logrado build)
-      # -----------------------------
-      - name: "🚀 Deploy to Cloud Run"
+      - name: 🚀 Deploy to Cloud Run
         run: |
-          echo "🚀 Deploy servicios disponibles..."
+          gcloud run deploy natacha-memory-console \
+            --image us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/memory_console:latest \
+            --region ${REGION} --platform managed --allow-unauthenticated
 
-          # memory_console
-          if docker image inspect gcr.io/${PROJECT_ID}/memory_console:latest > /dev/null 2>&1; then
-            gcloud run deploy natacha-memory-console \
-              --image gcr.io/${PROJECT_ID}/memory_console:latest \
-              --region ${REGION} \
-              --platform managed \
-              --allow-unauthenticated
-          else
-            echo "⚠️ No hay imagen de memory_console para desplegar."
-          fi
+          gcloud run deploy natacha-core \
+            --image us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha_core:latest \
+            --region ${REGION} --platform managed --allow-unauthenticated
 
-          # core
-          if docker image inspect gcr.io/${PROJECT_ID}/natacha_core:latest > /dev/null 2>&1; then
-            gcloud run deploy natacha-core \
-              --image gcr.io/${PROJECT_ID}/natacha_core:latest \
-              --region ${REGION} \
-              --platform managed \
-              --allow-unauthenticated
-          else
-            echo "⚠️ No hay imagen de natacha_core para desplegar."
-          fi
+          gcloud run deploy natacha-api \
+            --image us-central1-docker.pkg.dev/${PROJECT_ID}/${AR_REPO}/natacha-api:latest \
+            --region ${REGION} --platform managed --allow-unauthenticated
 
-          # api
-          if docker image inspect gcr.io/${PROJECT_ID}/natacha-api:latest > /dev/null 2>&1; then
-            gcloud run deploy natacha-api \
-              --image gcr.io/${PROJECT_ID}/natacha-api:latest \
-              --region ${REGION} \
-              --platform managed \
-              --allow-unauthenticated
-          else
-            echo "⚠️ No hay imagen de natacha-api para desplegar."
-          fi
-
-      - name: "✅ Health Check"
+      - name: ✅ Health Check
         run: |
-          echo "⌛ Health de la API..."
-          curl -f https://natacha-api-${{ env.REGION }}.a.run.app/health || true
+          curl -f https://natacha-api-${REGION}.a.run.app/health
