--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,10 +1,3 @@
-# Archivos y carpetas a ignorar en despliegues de gcloud
-.git
-.gitignore
-venv/
+!.git
 __pycache__/
 *.pyc
-*.log
-*.DS_Store
-.env
-deploy_*
