--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,11 @@ backups/
 # Backups REGISTRY
 REGISTRY.md.bak*
 knowledge/registry/REGISTRY.md.bak*
+
+# ---- allow tooling scripts (override broader ignores) ----
+!scripts/
+!scripts/**/*.sh
+
+# ---- allow tooling scripts (override broader ignores) ----
+!scripts/
+!scripts/**/*.sh
