chore(scripts): re-add update_registry_openapi.sh and regenerate REGISTRY OpenAPI block

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,7 @@ backups/
 # Backups REGISTRY
 REGISTRY.md.bak*
 knowledge/registry/REGISTRY.md.bak*
+
+# ---- allow tooling scripts (override broader ignores) ----
+!scripts/
+!scripts/**/*.sh
