sec: remove firestore-key from repo; ignore secret file

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ knowledge/registry/REGISTRY.md.bak*
 # ---- allow tooling scripts (override broader ignores) ----
 !scripts/
 !scripts/**/*.sh
+
+# secrets
+firestore-key.json
