chore: tighten .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,15 @@
-!.git
-__pycache__/
+.git
+.venv
+__pycache__
 *.pyc
+*.pyo
+*.pyd
+*.bak
+*~
+*.old
+*.backup
+REGISTRY.md.bak*
+backups/
+infra_snapshots/
+logs/
+venv/
