canon: entrypoint canal_a.main, rutas /ops/health y guardarraíl pre-commit compatible con plantillas

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,4 +1,11 @@
-!routes/**
-!service_main.py
-!Dockerfile
-!requirements.txt
+.git
+.venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.bak
+*~
+*.old
+*.backup
+venv/
