chore: green_check + build_stamp update

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,11 @@
-.git
-.venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-*.bak
-*~
-*.old
-*.backup
-REGISTRY.md.bak*
-backups/
-infra_snapshots/
-logs/
+.*
+!requirements.txt
+!build_stamp.txt
+canal_b*
+legacy_disabled*
+routes
+app_shim.py
+service_main.py
+__pycache__/
 venv/
+.venv/
