ci: robust JSON validation for GCP key (file-based)

--- a/.github/workflows/secret-check.yml
+++ b/.github/workflows/secret-check.yml
@@ -1,15 +1,25 @@
 name: Secret Check
 on: [workflow_dispatch]
+
 jobs:
   check:
     runs-on: ubuntu-latest
+    env:
+      GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
     steps:
-      - name: Show key presence
+      - name: Verificar que exista el secreto
         run: |
-          if [ -z "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" ]; then
+          if [ -z "$GCP_SA_KEY" ]; then
             echo "Secret missing" && exit 1
           fi
           echo "Secret present ✅"
-      - name: Validate JSON
+
+      - name: Escribir a archivo y validar JSON
         run: |
-          echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' | python3 -c "import sys,json; json.load(sys.stdin); print('Valid JSON ✅')"
+          printf '%s' "$GCP_SA_KEY" > key.json
+          python3 - <<'PY'
+import json
+with open('key.json','r',encoding='utf-8') as f:
+    json.load(f)
+print('Valid JSON ✅')
+PY
