fix(memory_console): bind to 0.0.0.0: via uvicorn entrypoint

--- a/memory_console/Dockerfile
+++ b/memory_console/Dockerfile
@@ -1,6 +1,14 @@
 FROM python:3.11-slim
 WORKDIR /app
-COPY . .
-RUN pip install --no-cache-dir fastapi uvicorn google-cloud-firestore requests
-EXPOSE 8080
-CMD ["uvicorn", "natacha_app:app", "--host", "0.0.0.0", "--port", "8080"]
+
+# Evita cache y reduce imagen
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+COPY memory_console/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY memory_console/ .
+
+# Cloud Run inyecta PORT. No expongas explícitamente; solo obedecé $PORT.
+CMD ["python", "main.py"]
