memory_console: run uvicorn main:app and honor $PORT

--- a/memory_console/Dockerfile
+++ b/memory_console/Dockerfile
@@ -1,14 +1,19 @@
 FROM python:3.11-slim
-WORKDIR /app
 
-# Evita cache y reduce imagen
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
+WORKDIR /app
+
+# Copiamos SOLO lo necesario para la build del servicio
 COPY memory_console/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copiamos el código del servicio
 COPY memory_console/ .
 
-# Cloud Run inyecta PORT. No expongas explícitamente; solo obedecé $PORT.
-CMD ["python", "main.py"]
+# Exponé el puerto "estándar" para documentación (Cloud Run pasa $PORT)
+EXPOSE 8080
+
+# Ejecuta uvicorn apuntando a main:app y tomando el puerto de $PORT
+CMD ["bash", "-lc", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
