memory_console: Dockerfile for context=memory_console (uvicorn main:app)

--- a/memory_console/Dockerfile
+++ b/memory_console/Dockerfile
@@ -5,15 +5,13 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 
-# Copiamos SOLO lo necesario para la build del servicio
-COPY memory_console/requirements.txt .
+# Instalar deps desde requirements del propio directorio
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiamos el código del servicio
-COPY memory_console/ .
+# Copiar el código del servicio
+COPY . .
 
-# Exponé el puerto "estándar" para documentación (Cloud Run pasa $PORT)
 EXPOSE 8080
-
-# Ejecuta uvicorn apuntando a main:app y tomando el puerto de $PORT
+# Uvicorn levanta main:app y respeta $PORT de Cloud Run
 CMD ["bash", "-lc", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
