--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,3 @@
-# --- CLEAN DOCKERIGNORE (minimal, allow all sources) ---
 .gcloudignore
 .git
 .gitignore
@@ -8,10 +7,7 @@ __pycache__/
 *.pyd
 .venv/
 venv/
-logs/
-backups/
-infra_snapshots/
-# NO EXCLUIR CODIGO FUENTE
+# NO excluir código fuente
 !routes/**
 !service_main.py
 !Dockerfile
