fix(build): ensure routes/ included in Cloud Build context

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@ __pycache__/
 *.pyd
 .venv/
 venv/
-# NO excluir código fuente
+# No excluir código fuente
 !routes/**
 !service_main.py
 !Dockerfile
