--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -7,11 +7,15 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.10', '3.11' ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-      - run: python3 -m pip install --upgrade pip
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+      - run: python -m pip install --upgrade pip
       - run: bash scripts/guard_no_hardcodes.sh
-      - run: python3 -m py_compile $(git ls-files '*.py')
+      - run: python -m py_compile $(git ls-files '*.py')
